@@ -78,6 +78,7 @@ public class TownCommand implements CommandExecutor  {
 		
 		if (sender instanceof Player) {
 			Player player = (Player)sender;
+			System.out.println("[PLAYER_COMMAND] " + player.getName() + ": /" + commandLabel + " " + StringMgmt.join(args));
 			parseTownCommand(player,args);
 		} else
 			// Console
