@@ -75,6 +75,7 @@ public class TownyAdminCommand implements CommandExecutor  {
 		
 		if (sender instanceof Player) {
 			Player player = (Player)sender;
+			System.out.println("[PLAYER_COMMAND] " + player.getName() + ": /" + commandLabel + " " + StringMgmt.join(args));
 			if (plugin.isTownyAdmin(player))
 				try {
 					parseTownyAdminCommand(player,args);
