@@ -58,6 +58,7 @@ public class TownyWorldCommand implements CommandExecutor  {
 		
 		if (sender instanceof Player) {
 			Player player = (Player)sender;
+			System.out.println("[PLAYER_COMMAND] " + player.getName() + ": /" + commandLabel + " " + StringMgmt.join(args));
 			parseWorldCommand(player,args);
 		} else {
 			// Console
