@@ -402,3 +402,4 @@ v0.73.3:
     - Towns now remember their respective states for fire, explosions, mob spawns and PVP when the World flags are toggled.
     - Towny will now attempt to repair corrupted world files.
     - Nations who change to a neutral state during a war are now correctly removed from the war.
+    - Towny now logs all player issued commands to the server.log
